--- a/DynamicSun/Views/Home/Index.cshtml
+++ b/DynamicSun/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Главная";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="main-wrapper">
+    <h1>Архив погодных условий в Москве</h1>
+    <div class="menu-wrapper">
+        <a class="menu-link" asp-controller="Weather" asp-action="Index">Просмотр архивов</a>
+        <a class="menu-link" asp-controller="Weather" asp-action="Import">Загрузка архивов</a>
+    </div>
 </div>
